--- a/index.qmd
+++ b/index.qmd
@@ -11,13 +11,41 @@ import pandas as pd
 
 f = "data/h20.csv"
 agua = pd.read_csv(f,index_col=0,parse_dates=True)
+agua_horaria = agua.resample("h").sum()
+agua_horaria["total"] = agua_horaria["h"] + agua_horaria["m"]
+
+
 agua_mensual = agua.resample("ME").sum()
 agua_mensual["total"] = agua_mensual.sum(axis=1)
 agua_mensual["por_h"] = round(agua_mensual.h/agua_mensual.total*100,ndigits=None).astype(int)
 agua_mensual["por_m"] = round(agua_mensual.m/agua_mensual.total*100).astype(int)
 ```
 
-## Row {height=60%}
+# Fugas
+
+
+```{python}
+
+# Crear la figura
+fig = px.line(agua_horaria, x=agua_horaria.index, 
+            y=["h","m"],
+              title='Consumo Horario de Agua',
+              labels={'ts': '', 'Consumo': 'Consumo (L)'})
+
+# Configurar la visualización
+fig.update_layout(
+    yaxis_title='Consumo (L)',
+    hovermode='x unified'
+)
+
+# Mostrar la figura
+# fig.show()
+
+```
+
+
+# Consumo
+
 
 ```{python}
 
@@ -28,6 +56,7 @@ fig = px.bar(agua_mensual, x=agua_mensual.index, y=['h', 'm'], title='Consumo me
 
 # Actualizar el layout para mejorar la visualización
 fig.update_layout(yaxis_title='Litros/Mes', xaxis_title='Fecha',
-                  xaxis={'type': 'date'})
+                  xaxis={'type': 'date'}, 
+                  barmode='group')
 
 ```
